# TurbOllama

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  setup.py
config/: default.yaml  models.yaml
scripts/: instal.sh  install.bat  start.bat  start.sh
turbollama/: __init__.py  main.py
turbollama/api/: __init__.py  ollama_routes.py  openai_routes.py  server.py
turbollama/core/: __init__.py  config.py  gpu_manager.py  llama_wrapper.py  model_manager.py
turbollama/ui/: __init__.py  gradio_interface.py
turbollama/ui/themes/: custom.css
turbollama/utils/: __init__.py  download.py  hardware.py
